# OASST

./: .condarc  .env  .flake8  .gitattributes  .gitignore  .gitlint  .pre-commit-config.yaml  .pylint.ini  README.md  class_parsing_and_extract.py  class_tree.py  data_processing.py  data_processing_ver2.py  data_processing_ver3.py  decompress.py  emojis.py  emojis_delete_test.html  environment.yml  environment_py312.yml  extracted_texts.xlsx  find_parsing_key_sample.py  gitattributes  gitattributes.txt  gitignore  my_database.duckdb  oasst.py  oasst_creator.py  oasst_json_row.py  oasst_json_test.py  oasst_maker.py  oasst_preprocessing.py  oasst_table.py  oasst_table_process.py  oasst_table_row.py  parsing_and_extract_class.py  parsing_key_test.py  parsing_test.py  poetry.toml  pyproject.toml  requirements.txt  (+11 more)
excel/: naver_blog.xlsx  naver_cafe_test_20240717.xlsm
google-apps-script/: index.gs
gui_app/: .condarc  .dockerignore  .gitignore  Dockerfile  README.md  conda-dev-environment.yml  development.env  environment.yml  production.env  pyproject.toml  requirements.txt  run.sh  scent.py  staging.env
gui_app/.streamlit/: config.toml
gui_app/gui_app/streamlit/: streamlit_app_mainpage.py
gui_app/gui_app/streamlit/pages/: 1_oasst_preprocessor_page.py  2_file_download_from_url.py
gui_app/nginx/: nginx.conf
json/: sample.json
oasst/: README.md  environment.yml  poetry.toml  pyproject.toml
oasst/oasst_maker/: maker.py  parsing_and_extract_class.py
oasst/oasst_maker/oasst_table_row/: oasst_table_row_lawtalk.py  oasst_table_row_naver.py
oasst/oasst_preprocessor/: csv_preprocessor.py  deduplicate.py  file_encoding_data.py  json_tree.py  json_tree_converter.py  parallel_processing.py  preprocessor.py  qa_separator.py  split.py  under_sampling.py
oasst/oasst_preprocessor/json_preprocessor/: convert_flat_to_tree.py  convert_tree_to_flat.py  json_input_preprocessor.py  json_output_preprocessor.py
oasst/tests/: test_oasst_preprocessor.py
oasst_maker/: class_tree.py  emojis.py  find_parsing_key_sample.py  oasst_maker.py  parsing_and_extract_class.py
oasst_preprocesser/: my_database.duckdb  oaasst_header_tooter_filtering.py  oasst_morpheme_deleter.py  oasst_preprocessing.py  oasst_preprocessing_duckdb.py  oasst_qa_separator.py  pyproject.toml  requirements.txt  test.py  test_duckdb_file.py  test_duckdb_query.py  testt.py
oasst_table_row/: oasst_table_row_naver.py
references_deprecated/: README copy.md  duckdb_example.py  oasst_preprocessing.py  polars_example.py  pyproject.toml  requirements.txt  staging.env
references_deprecated/demo_project/: pytest.ini
references_deprecated/demo_project/tests/: test_duckdb_code.py
references_deprecated/gui_app/gui_app/streamlit/: streamlit_app_mainpage.py
references_deprecated/gui_app/gui_app/streamlit/pages/: 1_htdata_classification_page.py  3_htdata_query_page.py
references_deprecated/oasst_preprocessor/: oasst_preprocessing_pyarrow_compute.py
references_deprecated/scripts/: check_gitlint_install_hook.sh
scripts/: check_gitlint_install_hook.py
test_parsing_blog_files/: main.d052989d16480028c371.js.다운로드  main.e5bbf35fa581b5142a63.css  react.ce378165b9d88f446990.js.다운로드
tests/: test_oasst_preprocessor.py
tools/: yaml_delete_comment.py
utils/: config.py  logger.py
xml/: sample.xml  sample1.xml  sample2.xml  sample_output.xml
개인회생 소득증가로 변제금액 달라질까_ 걱정되는 분들에게 _ 네이버 블로그_files/: BLOG.css  LegoPostView-860616387_https.js.다운로드  SkTRvmaEahk.html  base.js.다운로드  embed.js.다운로드  endFeed.css  endFeed.js.다운로드  gfp-core.js.다운로드  gfp-sdk.js.다운로드  lego_w-72971883_https.css  prismplayer-mobile-se-0.9.0-ef4bb63_https.css  remote.js.다운로드  saved_resource  se.2.f31a0a04.js.다운로드  se.component-17.589ce156.js.다운로드  se.component-18.fd141987.js.다운로드  se.component-21.15d3bf0f.js.다운로드  se.component-22.d62209b7.js.다운로드  se.component-25.a02f271e.js.다운로드  se.component-26.8d5812d6.js.다운로드  se.vendors~component-26~component-9.fe90c590.js.다운로드  spi_layer.css  spi_player_m.css  splugin.m.js.다운로드
댓글 _ 네이버 블로그_files/: cbox.all.js.다운로드  cbox.core.js.다운로드  vendor.e1b70ce41776cfcdc99c.js.다운로드
로톡 상담사례 검색하기 _ 변호사가 필요할 땐, 로톡_files/: 1221-93d3e4e541065c420829.css  160-732abd1c09c401ba9d80.css  2294-9a54b8c4c81bb79e1935.css  2594-7977ff533e1bd48ed1d1.css  2778-6b16b25ef4231608f4e3.css  37-7da2f9f4b11d3d3b65da.css  3772-1366d7ecde5aa6952c5c.css  4115-a0c3641263117839c13a.css  4203-c69a75555d8e2826d689.css  450112498883367  5010-7680647018188e92c43b.css  5546-9ed7bc5ba03323ea8b02.css  575-fd019bd584e86412f92e.css  6023-43cc50570339c65615f5.css  633-2c80e5c18937d0c74ead.css  6725-5b67d6f16bf28db13658.css  6767-bee6f4fcb43887a26dd3.css  6847-1e0032b6f749ab1f5b7a.css  7371-fed815f8d5ec032f1d5b.css  7975-db1c7058c3cdcf565903.css  8091-0005ce3edb28846253a7.css  9265-966cbd4c08d7e44dac47.css  9585-65c0b6dae585327dc0db.css  _app-50cb9b598666c9ee.js.다운로드  _buildManifest.js.다운로드  answer-report-service.style-1f30a7dadc8544e6fff7.css  encourage-advice-popup.sass-f409f856ca42a140daa6.css  gtm.js.다운로드  iam-renderer.js.다운로드  js(1)  main-a79ed85139e89c5a.js.다운로드  rul(1).html  rul.html  satisfaction-survey.sass-c5523c4891b5d67a5541.css  saved_resource.html  sdk(1).js.다운로드  sdk.js.다운로드  search-jsonp  search-jsonp(1)  terms-conditions-change-popup.sass-e0d9cf9b44f1ca96d7df.css  (+1 more)
먼책신청 문의_ _ 네이버 카페_files/: CAFE.css  app.a0a53f98cd12.css  app.bba0131fe60d.js.다운로드  chunk-2d0aa589.34d11bc1bb73.js.다운로드  chunk-2d0ab86d.d68c1fcab0a5.js.다운로드  chunk-2d0b66bc.142b932a5aad.js.다운로드  chunk-2d0b9218.c5c8dde021fb.js.다운로드  chunk-2d0be073.fe12be219cd4.js.다운로드  chunk-2d0d7ae4.e42a74f25609.js.다운로드  chunk-2d238059.38ca4a82d15d.js.다운로드  communication.3590b7a041.js.다운로드  communication.53b87bc66b.css  ntm_1c17953995e7.js.다운로드  openmain.js.다운로드  phup.js.다운로드  saved_resource.html  se.8.912770da.js.다운로드  se.viewer.css  web-crash-logger-1.0.2.min.js.다운로드
성매매 기소유예 선처를 받기 위하여 _ 로톡_files/: 121732008170404  241.821565f35082018c.js.다운로드  2625-fa6e06188d34fc45ea6d.css  3604-bb9da2216da046971d29.css  450112498883367  4524-0b308560b84d40bd5c08.css  6660-9aa640d3910202cc62f9.css  gtm.js.다운로드  js  js(2)  (+11 more)
(+44 files in other folders)
